Detect dog breed as part of moderation process Reject any photo which is not a specific dog breed (will approve any dog in a future commit)
