# api/internal/dogs/domain/domain.go
@@ -26,8 +26,3 @@ type DogList struct {
 	Dogs      []Dog
 	NextToken string
 }
-
-type BreedDetectionResult struct {
-	Breed      string
-	Confidence float64
-}
